--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <title>Leaflet test</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <link rel="stylesheet" href = "/static/style.css">
+    <script src="https://unpkg.com/htmx.org@1.9.6"></script>
 </head>
 <body>
     <div class="container">
@@ -13,8 +14,13 @@
             Left container (1/5th)
             <button onclick="addmarker('hi',20,-0.08)">Click Me!</button>
             <hr>
-            List All Checkins
-            <button onclick="addmarker('hi',20,-0.08)">Click Me!</button>
+            List All Checkins 
+            <button 
+            hx-get="/get_checkins"  
+            hx-trigger="click" 
+            hx-swap = "none" 
+            hx-on:htmx:after-request = "handleCheckins(event)">
+            Click Me!</button>
         </div>
         <div class="main-content">
             <div id = "map"></div>
