--- a/templates/index.html
+++ b/templates/index.html
@@ -57,8 +57,9 @@
             List Nearest Trajectory</button>
             <hr>
             <h4>Friends in a Rectangle</h4>
-            <br>
-            This function obtains all the friend checkins of a user in a given rectangle
+            This function obtains all the friend checkins of a user bounded in a rectangle.
+            In order to set the rectangle, click on the map to set the markers(red). To move the markers,
+            simply click on it to remove it.
             <input type="text" id="myTextbox4" name="myTextbox4" placeholder="0 to 196590">
             <button 
             onclick = "handleRec()">
